--- a/FlavourFlow/Components/Pages/ProfilePage.razor
+++ b/FlavourFlow/Components/Pages/ProfilePage.razor
@@ -6,6 +6,7 @@
 @using FlavourFlow.Data
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Components.Authorization
+@rendermode RenderMode.InteractiveServer
 
 @inject AuthenticationStateProvider AuthStateProvider
 @inject UserManager<FlavourFlowUser> UserManager
